--- a/drugihtml.html
+++ b/drugihtml.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<a href="../index.html">vrati me doma!</a>
+	<a href="index.html">vrati me doma!</a>
 <h1>Slike</h1>
 	<img src="note.jpg"/> 
 	<img src="ploce.jpg"/> <br/>
