--- a/drugihtml.html
+++ b/drugihtml.html
@@ -17,6 +17,10 @@
 	<video width="400" height="" controls>
 		<source src="mojvideo.mp4" type="video/mp4">
 	</video>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/7l16rt1h2tM" 
+		title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+		clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+	</iframe>
 	<h3>ZVUK</h3>
 	<audio controls>
 		<source src="glazba.mp3" type="audio/mp3"/>
